Fixed layout issue with sidebar and made minor improvements the layout of the entire page, however, centering has been broken in the process (work in prgress)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -75,15 +75,6 @@ button:focus-visible {
   }
 }
 
-.page-container {
-  min-height: calc(100vh - 64px); /* navbar height */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 1rem;
-}
-
 .page-inner {
   width: 100%;
   max-width: 420px;
